# stock_test

./: .env  client.spec  main.py  main.spec  main_debug.py  main_debug_windows.spec  main_windows.py  main_windows.spec  pyproject.toml
.github/workflows/: build.yml
common/logger/: logger.py
config/: __init__.py  data_manager.py  logs.json  products.json  schemas.py  settings.py  stores.json
core/: services.py
static/: index.html  initialize.html
